--- a/styles.css
+++ b/styles.css
@@ -48,18 +48,22 @@ nav li {
 }
 
 section {
-  margin: 48px 0;
-  height: 800px;
+  margin: 96px 0;
+  min-height: 800px;
+  height: 100%;
 }
 
 #mission {
   background-image: url('./images/milada-vigerova-iQWvVYMtv1k-unsplash.jpg');
   background-repeat: no-repeat;
   background-size: cover;
+  display: flex;
+  align-items: center;
 }
 
 .banner { 
   height: 100%;
+  width: 100%;
   justify-content: center;
   align-items: center;
   display: flex;
@@ -72,9 +76,43 @@ section {
   width: 100%;
 }
 
-figure {
-  color: white;
-  opacity: .6;
-  margin-top: -24px;
-  font-size: .75rem;
+#portfolio {
+  text-align: center;
+}
+
+.projects {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+.projects img {
+  width: 300px;
+  object-fit: cover;
+  height: 300px;
+}
+
+.project {
+  width: 400px;
+  margin-top: 3rem;
+}
+
+.project figcaption,
+.project figcaption a {
+  font-size: .5rem;
+}
+
+.project-name {
+  font-size: 2rem;
+}
+
+.project-description {
+  color:rgba(0, 0, 0, 0.8);
+  font-size: 0.9rem;
+  text-align: justify;
+  padding: 0 5%;
+}
+
+.image-position-top {
+  object-position: top;
 }
