--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,8 @@
 
 html {
   font-family: 'Lexend Mega', sans-serif;
-  background-color: rgba(0, 0, 0, 0.1);
+  background-color: rgba(0, 0, 0, 0.15);
+  color:rgba(0, 0, 0, 0.8);
 }
 
 body {
@@ -48,7 +49,7 @@ nav li {
 }
 
 section {
-  margin: 96px 0;
+  margin: 36px 0 96px 0;
   min-height: 800px;
   height: 100%;
 }
@@ -57,6 +58,7 @@ section {
   background-image: url('./images/milada-vigerova-iQWvVYMtv1k-unsplash.jpg');
   background-repeat: no-repeat;
   background-size: cover;
+  border-radius: 10px;
   display: flex;
   align-items: center;
 }
@@ -86,10 +88,15 @@ section {
   justify-content: center;
 }
 
+img {
+  box-shadow: 2px 4px 4px rgba(0, 0, 0, 0.4);
+}
+
 .projects img {
   width: 300px;
   object-fit: cover;
   height: 300px;
+  border-radius: 10px;
 }
 
 .project {
@@ -100,10 +107,13 @@ section {
 .project figcaption,
 .project figcaption a {
   font-size: .5rem;
+  color: rgba(0, 0, 0, 0.4);
 }
 
 .project-name {
   font-size: 2rem;
+  min-height: 80px;
+  margin: auto;
 }
 
 .project-description {
@@ -115,4 +125,16 @@ section {
 
 .image-position-top {
   object-position: top;
+}
+
+#team {
+  width: 100%;
+}
+
+.team-card img {
+  width: 300px;
+}
+
+footer {
+  text-align: center;
 }
