feat: start of responsive elements added

--- a/styles.css
+++ b/styles.css
@@ -193,3 +193,42 @@ footer address p {
 }
 
 /* Media */
+
+@media screen and (min-width: 460px) {
+
+  figcaption,
+  .info {
+    display: none;
+  }
+
+  .team-card {
+    display: flex;
+    margin-top: 96px;
+  }
+
+  /* .team-card:nth-child(2n+1) {
+    flex-flow: row-reverse;
+  } */
+
+  .team-card figure {
+    width: 50%;
+  }
+
+  .team-card img {
+    width: 90%;
+  }
+
+  .team-member-name {
+    margin: 0;
+    font-size: 48px;
+  }
+  
+  .team-member-info {
+    width: 40%;
+  }
+
+  .position {
+    font-size: 24px;
+  }
+
+}
