--- a/styles.css
+++ b/styles.css
@@ -196,9 +196,59 @@ footer address p {
 
 @media screen and (min-width: 460px) {
 
+  h1 {
+    font-size: 5rem;
+    margin-bottom: 0;
+  }
+
+  h3 {
+    font-size: 3rem;
+  }
+
+  #portfolio p {
+    width: 80%;
+    margin: 24px auto;
+  }
+
+  nav {
+    display: none;
+  }
+
   figcaption,
   .info {
     display: none;
+  }
+
+  .projects {
+    display: flex;
+    flex-direction: column;
+    justify-items: center;
+  }
+
+  .project {
+    width: 100%;
+    height: 900px;
+    margin-bottom: 78px;
+  }
+
+  .project figure {
+    margin-bottom: 48px;
+  }
+
+  .project img {
+    height: 400px;
+    width: 400px;
+  }
+
+  .project-name {
+    font-size: 3rem;
+  }
+
+  .project-description {
+    text-align: left;
+    line-height: 1.5;
+    font-size: 2rem;
+    margin: 24px auto;
   }
 
   .team-card {
