--- a/styles.css
+++ b/styles.css
@@ -194,7 +194,7 @@ footer address p {
 
 /* Media */
 
-@media screen and (min-width: 460px) {
+@media screen and (max-width: 460px) {
 
   h1 {
     font-size: 5rem;
