--- a/styles.css
+++ b/styles.css
@@ -1,24 +1,27 @@
 @import url('https://fonts.googleapis.com/css2?family=Lexend+Mega&display=swap');
 
-html {
+html,
+body {
   font-family: 'Lexend Mega', sans-serif;
   background-color: rgba(0, 0, 0, 0.15);
   color:rgba(0, 0, 0, 0.8);
-}
-
-body {
-  width: 1200px;
-  margin: 0 auto;
+  max-width: 1200px;
+  margin: auto;
 }
 
 header {
-  display: flex;
-  justify-content: space-between;
-  flex-direction: column;
+  text-align: center;
+  margin: auto;
+}
+
+main {
+  text-align: center;
 }
 
 h1 {
-  font-size: 4rem;
+  margin-top: 0;
+  padding: 20px;
+  font-size: 4vw;
 }
 
 h1,
@@ -39,9 +42,8 @@ a:visited {
 
 nav ul {
   display: flex;
-  justify-content: space-between;
-  padding: 0;
-  margin-top: 0;
+  justify-content: space-around;
+  padding: 10px; 
 }
 
 nav li {
@@ -50,16 +52,14 @@ nav li {
 }
 
 section {
-  margin: 56px 0;
-  min-height: 800px;
   height: 100%;
-  border-radius: 10px;
 }
 
 #mission {
   background-image: url('./images/milada-vigerova-iQWvVYMtv1k-unsplash.jpg');
   background-repeat: no-repeat;
   background-size: cover;
+  max-width: 100%;
   display: flex;
   align-items: center;
 }
@@ -93,6 +93,7 @@ section {
 
 img {
   box-shadow: 2px 4px 4px rgba(0, 0, 0, 0.4);
+  max-width: 100%;
 }
 
 .project {
@@ -102,8 +103,8 @@ img {
 
 .projects img {
   width: 300px;
-  object-fit: cover;
   height: 300px;
+  object-fit: cover;
   border-radius: 10px;
 }
 
@@ -181,7 +182,6 @@ img {
 
 footer {
   text-align: center;
-  margin-bottom: 80px;
 }
 
 footer address {
@@ -195,87 +195,72 @@ footer address p {
 
 /* Media */
 
-/* @media screen and (max-width: 460px) {
+@media screen and (min-width: 481px) {
+
+  section {
+    min-height: 800px;
+  }
+  
+}
+
+@media screen and (max-width: 480px) {
 
   h1 {
-    font-size: 5rem;
-    margin-bottom: 0;
+    margin-top: 0;
+    font-size: 1.8rem;
+    padding-top: 20px;
   }
 
-  h3 {
-    font-size: 3rem;
+  section { 
+    margin: 0;
+    border-radius: 0;
   }
 
-  #portfolio p {
-    width: 80%;
-    margin: 24px auto;
+  #mission {
+    border-radius: 0;
+    background-size: cover;
   }
 
   nav {
     display: none;
   }
 
-  figcaption,
+  #team h3 {
+    font-size: 1rem;
+  }
+
+  .team-card {
+    margin: 96px auto;
+    display: flex;
+    flex-direction: column-reverse;
+  }
+
+  .team-card figure {
+    width: 100%;
+  }
+
+  .team-card figure img {
+    width: 100%;
+  }
+
+  .team-member-info {
+    width: 80%;
+    border-radius: 10px;
+    text-align: center;
+    padding: 0 24px;
+  }
+
+  .team-member-name {
+    font-weight: 900;
+    font-size: 1.4rem;
+  }
+
+  .position {
+    font-size: 0.8rem;
+  }
+
   .info {
     display: none;
   }
 
-  .projects {
-    display: flex;
-    flex-direction: column;
-    justify-items: center;
-  }
-
-  .project {
-    width: 100%;
-    height: 900px;
-    margin-bottom: 78px;
-  }
-
-  .project figure {
-    margin-bottom: 48px;
-  }
-
-  .project img {
-    height: 400px;
-    width: 400px;
-  }
-
-  .project-name {
-    font-size: 3rem;
-  }
-
-  .project-description {
-    text-align: left;
-    line-height: 1.5;
-    font-size: 2rem;
-    margin: 24px auto;
-  }
-
-  .team-card {
-    display: flex;
-    margin-top: 96px;
-  }
-
-  .team-card figure {
-    width: 50%;
-  }
-
-  .team-card img {
-    width: 90%;
-  }
-
-  .team-member-name {
-    margin: 0;
-    font-size: 48px;
-  }
-  
-  .team-member-info {
-    width: 40%;
-  }
-
-  .position {
-    font-size: 24px;
-  }
-
-} */
+}
